# cangaroo

./: .clang-format  .gitignore  CMakeLists.txt
src/: mainwindow.cpp  src.pro
src/core/: portable_endian.h
src/driver/CandleApiDriver/: CandleApiInterface.h
src/driver/PeakCanDriver/: PeakCanDriver.cpp  PeakCanDriver.h  PeakCanDriver.pri  PeakCanInterface.cpp  PeakCanInterface.h
src/window/CanCfgWindow/: CanCfgWindow.cpp  CanCfgWindow.h  CanCfgWindow.ui
src/window/TraceWindow/: AutoHeightDelegate.h  TraceFilterModel.cpp
